updated naming and experimented with the X11 windows

--- a/partials/display.html
+++ b/partials/display.html
@@ -69,7 +69,7 @@
             return new Response(cs.readable).arrayBuffer()
         }}
 
-        const windowId = {window_id}; // Set your window ID here
+        const windowId = {display_id}; // Set your window ID here
         let transport = null;
         let ws = null;
         let datagramWriter = null;
