--- a/partials/display.html
+++ b/partials/display.html
@@ -143,8 +143,6 @@
                 
             }} catch (error) {{
                 console.error('WebTransport connection failed:', error);
-                console.log('Falling back to WebSocket');
-                await connectWebSocket();
             }}
         }}
         async function serverSync(settings) {{
@@ -262,35 +260,16 @@
                 // Decompress image
                 
                 const decompressed = decompressBytes(fullData).then((decompressed) => {{
-                    const blob = new Blob([decompressed], {{ type: 'image/webp' }});
+                    const blob = new Blob([decompressed], {{ type: 'image/bmp' }});
                     const imgUrl = URL.createObjectURL(blob);
-                    const img = document.getElementById('windowImage');
                     if (img.src && img.src.startsWith('blob:')) {{
                         URL.revokeObjectURL(img.src);
                     }}
                     img.src = imgUrl;
                 }})
                 
-                
                 stats.framesReceived++;
                 stats.lastFrameTime = Date.now();
-                
-                // Display image
-
-                
-
-                // var reader = new FileReader();
-                // reader.readAsDataURL(blob); 
-                // reader.onloadend = function() {{
-                // var base64data = reader.result;                
-                //     img.src = base64data;
-
-                // }}
-                // return
-
-                // Clean up old blob URL
-
-                // console.log(`Frame ${{currentFrame.id}} complete: ${{currentFrame.totalChunks}} chunks, ${{totalSize}} bytes`);
                 
             }} catch (error) {{
                 console.error('Error reassembling frame:', error);
@@ -298,27 +277,27 @@
         }}
         
         function updateStats() {{
-            stats.timePassed = Date.now() - stats.lastUpdate
+            // stats.timePassed = Date.now() - stats.lastUpdate
             // stats.frameSavedFPSCount += stats.framesReceived - stats.timePassed
             // stats.timePassed = stats.framesReceived
             
             // const fps = stats.framesReceived > 0 ? 
             //     (1000 / (Date.now() - stats.lastFrameTime)).toFixed(1) : 0;
-            if (stats.timePassed >= 5000) {{
-                const total_frames = stats.framesReceived - stats.frameSavedFPSCount
+            // if (stats.timePassed >= 5000) {{
+            //     const total_frames = stats.framesReceived - stats.frameSavedFPSCount
 
-                stats.lastFPS = total_frames / (stats.timePassed / 1000)
-                stats.lastFPS = stats.lastFPS.toFixed(1)
-                stats.frameSavedFPSCount = stats.framesReceived
-                stats.lastUpdate = Date.now()
-            }}
+            //     stats.lastFPS = total_frames / (stats.timePassed / 1000)
+            //     stats.lastFPS = stats.lastFPS.toFixed(1)
+            //     stats.frameSavedFPSCount = stats.framesReceived
+            //     stats.lastUpdate = Date.now()
+            // }}
             
-            document.getElementById('stats').innerHTML = `
-                Frames: ${{stats.framesReceived}} | Dropped: ${{stats.framesDropped}}<br>
-                Chunks: ${{stats.chunksReceived}}<br>
-                Current: ${{currentFrame.receivedChunks}}/${{currentFrame.totalChunks}}<br>
-                FPS: ${{stats.lastFPS}}
-            `;
+            // document.getElementById('stats').innerHTML = `
+            //     Frames: ${{stats.framesReceived}} | Dropped: ${{stats.framesDropped}}<br>
+            //     Chunks: ${{stats.chunksReceived}}<br>
+            //     Current: ${{currentFrame.receivedChunks}}/${{currentFrame.totalChunks}}<br>
+            //     FPS: ${{stats.lastFPS}}
+            // `;
         }}
 
         async function setup() {{
@@ -333,34 +312,65 @@
             }}
         }}
         
+        async function base64Blob(base64) {{
+            // var ab = new ArrayBuffer(base64.length);
+            // var ia = new Uint8Array(ab);
+            // for (var i = 0; i < base64.length; i++) {{
+            //     ia[i] = base64.charCodeAt(i);
+            // }}
+            // console.log(ia)
+            // // write the ArrayBuffer to a blob, and you're done
+            // var bb = new Blob([ia], {{ type: 'image/bmp' }});
+            // return URL.createObjectURL(bb)
+            // const data = await fetch(base64);
+            const base64Response = await fetch(`data:image/bmp;base64,${{base64}}`);
+            const blob = await base64Response.blob()
+            // console.log(blob)
+            return URL.createObjectURL(blob)
+            // return URL.createObjectURL(blob)
+            //
+            // return 
+            // buffer = Buffer.from(base64, 'base64')
+            // const blob = new Blob([buffer], {{ type: 'image/webp' }});
+            // const imgUrl = URL.createObjectURL(blob);
+            // return imgUrl
+
+        }}
+
         async function connectWebSocket() {{
             const protocol = window.location.protocol === 'https:' ? 'wss:' : 'ws:';
             const wsUrl = `${{protocol}}//${{window.location.hostname}}:8081/ws/${{windowId}}`;
-            
+            let numMessages
+            let lastDelta
+
             ws = new WebSocket(wsUrl);
             
             ws.onopen = () => {{
                 useWebTransport = false;
                 updateStatus('websocket');
                 console.log('WebSocket connected');
+                // Stats initialization
+                numMessages = 0
+                lestDelta = Date.now()
             }};
             
             ws.onmessage = (event) => {{
-                const data = JSON.parse(event.data);
-                if (data.settings) {{
-                    serverSync(data.settings)
-                }}
-                if (data.type === 'window_update') {{
-                    if (data.image) {{
-                        document.getElementById('windowImage').src = data.image;
-                    }} else if (data.compressed_image) {{
-                        stats.framesReceived++;
-                        stats.lastFrameTime = Date.now();
-                        decompress(data.compressed_image).then((decompressed) => {{
-                            const base64String = btoa(String.fromCharCode.apply(null, new Uint8Array(decompressed)));
-                            document.getElementById('windowImage').src = `data:image/webp;base64,${{base64String}}`
-                        }}
-                        )
+                numMessages += 1
+                // It's an image  blob 
+                if (event.data instanceof Blob) {{
+                    let windowImage = document.getElementById('windowImage')
+                    if (windowImage.src) {{
+                        URL.revokeObjectURL(windowImage.src)
+                    }}
+                    windowImage.src = URL.createObjectURL(event.data)
+                    stats.framesReceived++;
+                    console.log(`===== uncompressed frame ${{numMessages}} =====`)
+                    console.log('clientdelta', (Date.now() - lastDelta) / 1000)
+                    lastDelta = Date.now()
+                }} else {{ // It's a JSON message
+                    const data = JSON.parse(event.data);
+                    if (data.settings) {{
+                        serverSync(data.settings)
                     }}
                 }}
             }};
@@ -396,6 +406,7 @@
         }}
         
         async function sendMessage(message) {{
+            console.log('SendimgMessage', message)
             if (useWebTransport && datagramWriter) {{
                 try {{
                     const data = new TextEncoder().encode(JSON.stringify(message));
@@ -507,7 +518,7 @@
             serverSync()
         }}, 2000)
 
-        setInterval(updateStats, 500);
+        // setInterval(updateStats, 500);
     </script>
 </body>
 </html>
